[project]
name = "route-tool"
version = "0.1.0"
description = "公司网络路由配置工具"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/route_tool"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
